bal-echo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bal-echo
  name: bal-echo
  namespace: keda-test
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8090
  type: ClusterIP  
  selector:
    app: bal-echo
  sessionAffinity: None
