newIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bal-echo-ingress-new
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bal-echo
            port:
              number: 80
        path: /(|$)(.*)
