prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-service
  namespace: keda-test
  annotations:
    kubernetes.io/ingress.class: nginx    
spec:
  rules:  
    - http:
        paths:
        - backend:
            service:
              name: prometheus-server
              port: 
                number: 9090
          path: /
          pathType: Prefix
